.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- "Relevance" was not internationalized in search_form.pt. This closes
  http://dev.plone.org/plone/ticket/9747
  [vincentfretin]

- "Your Plone site is up to date" was not internationalized in plone-upgrade.pt.
  This closes http://dev.plone.org/plone/ticket/9746
  [vincentfretin]

- "Preferences" link should go directly to the personal prefs, the memberprefs
  panel is an unnecessary abstraction here. Add-on products can easily add new
  links to the personal menu now, so that's the pattern we want to encourage.

- Removed the login portlet from the default setup now that the login link opens
  an inline window.
  [limi]

- Fixed a DYNAMIC_CONTENT in site_feedback_template.pt
  [vincentfretin]

- Make sure the 'Portlets: View dashboard' permission is set for Members.
  [davisagli]

- Make sure the mock MailHost used in tests is registered as a local utility
  so that it can be found via getToolByName.
  [davisagli]

- Moved all CSS styles to plonetheme.classic package. plonetheme.sunburst is
  now default theme, both are installed by default, classic theme may be
  uninstalled, sunburst theme can't be uninstalled. 
  [limi, naro]

- Added site_encoding and bodyClass methods to the @@plone view. These should
  simplify main template a bit.
  [naro]

- Avoid AttributeError while getting the CMF version for the
  plone_control_panel when enable-product-installation is off in
  zope.conf.
  [maurits]

- Fixed bad internationalized messages in logged_out.pt
  [vincentfretin]

- Changed default message for label_show_all msgid from "Show all..." to
  "Show all items" in livesearch_reply.py to be the same as in folder_contents
  view which use the same msgid.
  [vincentfretin]  
